tests/paczka1/fuzzy1/86403522.err
Error in line 4: 9Iz S483 10,6
Error in line 10: xv8oNLR S345 30,E
Error in line 2: ntjXM S483 92,2
Error in line 12: ntjXM A343 51,3
Error in line 1: xv8oNLR A343 0,8
